--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: CI workflow
+name: CI Workflow
 
 on:
   push:
@@ -30,3 +30,25 @@ jobs:
           pip install flake8
           flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
+
+  test:
+    runs-on: ubuntu-latest
+    container: python:3.9-slim
+
+    steps:
+      # Checkout the code
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      # Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Run unit tests with nose
+      - name: Run unit tests with nose
+        run: |
+          pip install nose
+          nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
+
